kubernetes/apps/default/misc-ingress/app/hass-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hass
  # annotations:
  #   gethomepage.dev/enabled: "true"
  #   gethomepage.dev/icon: hass.png
  #   gethomepage.dev/name: hass
  #   gethomepage.dev/group: Media
  #   gethomepage.dev/widget.type: hass
  #   gethomepage.dev/widget.url: http://${HASS_IP}:8265
spec:
  ingressClassName: internal
  rules:
    - host: &host hass.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: hass
                port:
                  number: 8123
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: hass
subsets:
  - addresses:
      - ip: ${HASS_IP}
    ports:
      - name: http
        port: 8123
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: hass
spec:
  ports:
    - name: http
      port: 8123
  type: ClusterIP
